[#162363646] Purge redundant published ticks
* implemented ticks purging logic
* Added logging to all purgers
* Made all purgers use configuration for intervals

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -13,5 +13,15 @@ management:
     web:
       base-path: /mgmt
 
-purge:
-  schedule: 250
+clocks:
+  purge:
+    interval: 5000
+
+schedules:
+  purge:
+    interval: 250
+
+ticks:
+  purge:
+    interval: 500
+    keepCount: 1
