--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,12 @@ buildscript {
 
     repositories {
         mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.1.RELEASE")
         classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
+        classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.3'
     }
 }
 
@@ -15,6 +17,7 @@ apply plugin: 'kotlin'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
+apply plugin: 'com.github.johnrengelman.shadow'
     
 
 bootJar {
@@ -153,8 +156,21 @@ task shutDownE2EDockerCompose() {
 
 e2eWithDocker.finalizedBy(shutDownE2EDockerCompose)
 
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 
+task testJar2(type: ShadowJar) {
+    classifier = 'tests'
+    from sourceSets.test.output.classesDirs
+    configurations = [project.configurations.testRuntime]
+    exclude "test/**"
+}
 
+task testJar(type: Jar) {
+    classifier = 'tests'
+    from sourceSets.test.output.classesDirs
+    exclude "test/**"
+}
 
+assemble.finalizedBy(testJar)
 
 
