--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ jobs:
   build:
     machine:
       # specify the version you desire here
-      - image: circleci/classic:latest
+      enabled: true
+      type: circleci/classic:latest
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
