--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     machine:
       # specify the version you desire here
-      image: circleci/classic:latest
+      image: circleci/classic:201808-01
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
