--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,10 @@ jobs:
     steps:
       - checkout
 
+      - run:
+          name: Update NodeJS
+          command: ./circleci/update_node.sh
+
       - run: node --version
 
       - run:
