--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@
 version: 2
 jobs:
   build:
-    docker:
+    machine:
       # specify the version you desire here
       image: circleci/classic:201808-01
 
