--- a/.circleci/docker-compose.ci.yml
+++ b/.circleci/docker-compose.ci.yml
@@ -10,6 +10,7 @@ services:
     - MONGO_URI=mongodb://mongo/e2e-test
     - SELF_DOMAIN=http://localhost:8080
     - ACCESS_TOKEN=${E2E_ACCESS_TOKEN}
+    - RABBIT_CONSUMERURI=amqp://localhost
     - RABBIT_QUEUE_TTL=200
     - CLOCKS_PURGE_INTERVAL=5000
     - SCHEDULES_PURGE_INTERVAL=250
