--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   rabbit:
-    image: rabbitmq:3-management
+    image: rabbitmq:3-management-alpine
     ports:
       - 8888:15672
       - 5672:5672
