--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -37,5 +37,11 @@
     "jest-dom": "^1.12.1",
     "react-testing-library": "^5.4.4",
     "redux-mock-store": "^1.5.3"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
