--- a/build.gradle
+++ b/build.gradle
@@ -24,10 +24,9 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 
-
 bootJar {
     baseName = 'ticktok'
-    version =  '0.1.2'
+    version = '0.1.2'
 }
 
 sourceCompatibility = 1.8
@@ -140,8 +139,11 @@ clean {
 test {
     environment "DASHBOARD_URL", "http://localhost:8080"
     systemProperty "startApp", System.getProperty("startApp")
-    useJUnitPlatform()
+    useJUnitPlatform {
+        if (project.hasProperty('tags')) {
+            includeTags project.getProperties()['tags'] as String
+        }
+    }
 }
-
 
 buildScan { termsOfServiceUrl = 'https://gradle.com/terms-of-service'; termsOfServiceAgree = 'yes' }
