--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,7 +139,7 @@ jobs:
         name: Deploy ticktok server (Heroku)
         no_output_timeout: 5m
         command: |
-          if [ "${CIRCLE_BRANCH}" == "develop" ];
+          if [ "${CIRCLE_BRANCH}" == "develop" ]; then
             .circleci/deploy_to_heroku.sh
           fi
     - run:
