--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,3 @@
-# Java Gradle CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-java/ for more details
-#
 version: 2
 jobs:
   build:
@@ -9,11 +5,6 @@ jobs:
       # specify the version you desire here
       image: circleci/classic:201808-01
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: rabbitmq:3.7
-      # - image: mongo:3.4
     working_directory: ~/repo
 
     environment:
@@ -24,8 +15,6 @@ jobs:
 
     steps:
     - checkout
-
-    # - setup_remote_docker
 
     - run:
         name: Start mongo & rabbit
@@ -94,8 +83,22 @@ jobs:
 
     - run:
         name: E2E tests against dockered app
-        command: ./gradlew test --tests e2e.* -DstartApp=no --info --scan
+        command: ./gradlew test --tests e2e.* -DstartApp=no --scan
 
+    - store_test_results:
+        path: build/test-results
+
+    - run:
+        name: Stop app
+        command: .circleci/run_compose.sh down
+
+    - run:
+        name: Start as sandbox
+        command: .circleci/run_compose_sandbox.sh up -d app rabbit
+
+    - run:
+        name: Sandbox sanity testing
+        command: ./gradlew test -Ptags=sanity -DstartApp=no --scan
 
     - run:
         name: Collect app logs
@@ -113,16 +116,23 @@ jobs:
 
     - run:
         name: Setup heroku
-        command: .circleci/heroku_setup.sh
-
+        command: |
+          if [ "${CIRCLE_BRANCH}" == "develop" ]; then
+            .circleci/heroku_setup.sh
+          fi
     - run:
         name: Deploy ticktok server (Heroku)
         no_output_timeout: 5m
-        command: .circleci/deploy_to_heroku.sh
-
+        command: |
+          if [ "${CIRCLE_BRANCH}" == "develop" ]; then
+            .circleci/deploy_to_heroku.sh
+          fi
     - run:
         name: Publish to dockerhub
-        command: .circleci/publish_to_dockerhub.sh
+        command: |
+          if [[ "${CIRCLE_BRANCH}" == "master" ]] || [[ "${CIRCLE_BRANCH}" == realease-* ]]; then
+            .circleci/publish_to_dockerhub.sh
+          fi
 
 
 
