--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,9 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 
-bootJar {
+zxc csdfsd
+
+bootJar123 {
     baseName = 'ticktok'
     version = '0.1.2'
 }
