--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,7 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'com.github.johnrengelman.shadow'
 
 
-zxc csdfsd
-
-bootJar123 {
+bootJar {
     baseName = 'ticktok'
     version = '0.1.2'
 }
@@ -76,7 +74,9 @@ dependencies {
 
     // JUnit 5
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.1.0"
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-params:5.3.2'
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.1.0"
+
 
     testCompile "org.hamcrest:hamcrest-all:1.3"
     testCompile "org.mockito:mockito-core:2.15.0"
