--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ http:
   auth-token: ${ACCESS_TOKEN:41082cd7e33aa93ee76635820ded697f2c0b1b32}
 
 spring:
+  profiles:
+    default: rabbit
   data:
     mongodb:
       uri: ${MONGO_URI}
