--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -7,6 +7,8 @@ http:
   auth-token: a5f98e2b068ee51f90fd81c530e7fb4e306e7f42
 
 spring:
+  profiles:
+    default: rabbit
   data:
     mongodb:
       uri: mongodb://localhost/ticktok_test
