--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -83,7 +83,7 @@ jobs:
 
     - run:
         name: E2E tests against dockered app
-        command: ./gradlew test --tests e2e.* -DstartApp=no --scan
+        command: ./gradlew test -Ptags=core-tests -DstartApp=no --scan
 
     - store_test_results:
         path: build/test-results
@@ -94,11 +94,11 @@ jobs:
 
     - run:
         name: Start as sandbox
-        command: .circleci/run_compose_sandbox.sh up -d app rabbit
+        command: .circleci/run_compose_sandbox.sh up -d app
 
     - run:
         name: Sandbox sanity testing
-        command: ./gradlew test -Ptags=sanity -DstartApp=no --scan
+        command: ./gradlew test -Ptags=http-broker-tests -DstartApp=no --scan
 
     - run:
         name: Collect app logs
