Handled rabbit health indication

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -14,6 +14,9 @@ spring:
       uri: mongodb://localhost/ticktok_test
 
 management:
+  health:
+    defaults:
+      enabled: false
   endpoint:
     shutdown:
       enabled: true
