--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,13 @@ spring:
 queues:
   ttl: 120000
 
+
 management:
+  health:
+    defaults:
+      enabled: false
+    mongo:
+      enabled: true
   endpoint:
     shutdown:
       enabled: true
