--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,13 +23,10 @@ management:
       enabled: false
     mongo:
       enabled: true
-  endpoint:
-    shutdown:
-      enabled: true
   endpoints:
     web:
       exposure:
-        include: health, shutdown, env, info
+        include: health
       base-path: /mgmt
 
 clocks:
