[#163005226] Allow to run server without external RabbitMQ
* Refactored tick channel to return type
* Implemented http client for e2e
* Optimised e2e tests
* Implemented queues repository
* Implemented http queue TTL
* Return 404 on queue not found in http mode
* Added active profile to yml
* Wait for app to start on ct
* Choose http profile when no rabbit uri is given
* Handled rabbit health indication

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,13 +7,26 @@ http:
   auth-token: ${ACCESS_TOKEN:41082cd7e33aa93ee76635820ded697f2c0b1b32}
 
 spring:
+  profiles:
+    active: rabbit
   data:
     mongodb:
       uri: ${MONGO_URI}
 
+queues:
+  ttl: 120000
+
+
 management:
+  health:
+    defaults:
+      enabled: false
+    mongo:
+      enabled: true
   endpoints:
     web:
+      exposure:
+        include: health
       base-path: /mgmt
 
 clocks:
