--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlin_version = '1.3.10'
+    ext.kotlin_version = '1.3.21'
 
     repositories {
         mavenCentral()
@@ -21,7 +21,6 @@ apply plugin: 'kotlin'
 apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'com.github.johnrengelman.shadow'
 
 
 bootJar {
@@ -74,6 +73,7 @@ dependencies {
 
     // JUnit 5
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.1.0"
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-params:5.3.2'
     testImplementation "org.junit.jupiter:junit-jupiter-api:5.1.0"
 
     testCompile "org.hamcrest:hamcrest-all:1.3"
@@ -90,7 +90,7 @@ dependencies {
     testCompile "org.apache.httpcomponents:httpclient:4.5.5"
     testCompile "org.apache.httpcomponents:fluent-hc:4.5.5"
     testCompile 'org.assertj:assertj-core:3.11.1'
-    testCompile group: 'org.awaitility', name: 'awaitility-kotlin', version: '3.1.5'
+    testCompile "org.awaitility:awaitility-kotlin:3.1.5"
 }
 
 compileKotlin {
