--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 buildscript {
-    ext.kotlin_version = '1.3.31'
-
+    ext.kotlinVersion = '1.3.50'
     repositories {
         mavenCentral()
         jcenter()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.4.RELEASE")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.3'
     }
 }
+
 
 plugins {
     id 'com.gradle.build-scan' version '2.3'
@@ -22,6 +22,11 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
+ext {
+    cache2kVersion = '1.2.2.Final'
+    swaggerVersion = '2.6.1'
+    lombokVersion = '1.16.20'
+}
 
 bootJar {
     baseName = 'ticktok'
@@ -41,8 +46,8 @@ dependencies {
         all*.exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
     }
 
-    compileOnly "org.projectlombok:lombok:1.16.20"
-    annotationProcessor "org.projectlombok:lombok:1.16.20"
+    compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
     // Spring
     compile("org.springframework.boot:spring-boot-starter-web") {
@@ -54,6 +59,7 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-aop"
     compile "org.springframework.boot:spring-boot-starter-data-mongodb"
     compile "org.springframework.boot:spring-boot-starter-amqp"
+    compile "org.springframework.boot:spring-boot-starter-hateoas"
 
     compile "org.eclipse.jetty:jetty-webapp:9.3.+"
     compile "org.eclipse.jetty:jetty-jsp:9.2.+"
@@ -63,13 +69,16 @@ dependencies {
 
     compile "com.google.code.gson:gson:2.8.2"
 
-    //Swagger
-    compile "io.springfox:springfox-swagger2:2.6.1"
-    compile "io.springfox:springfox-swagger-ui:2.6.1"
+    // Swagger
+    compile "io.springfox:springfox-swagger2:${swaggerVersion}"
+    compile "io.springfox:springfox-swagger-ui:${swaggerVersion}"
+
+    implementation "org.cache2k:cache2k-api:${cache2kVersion}"
+    runtimeOnly "org.cache2k:cache2k-core:${cache2kVersion}"
 
 
     // ======================= Tests ==========================
-    testCompile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    testCompile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
 
     // JUnit 5
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.1.0"
@@ -91,6 +100,7 @@ dependencies {
     testCompile "org.apache.httpcomponents:fluent-hc:4.5.5"
     testCompile 'org.assertj:assertj-core:3.11.1'
     testCompile "org.awaitility:awaitility-kotlin:3.1.5"
+
 }
 
 compileKotlin {
