--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,8 @@ repositories {
     jcenter()
 }
 
+def cache2kVersion = '1.2.2.Final'
+
 dependencies {
     configurations {
         all*.exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
@@ -66,6 +68,9 @@ dependencies {
     //Swagger
     compile "io.springfox:springfox-swagger2:2.6.1"
     compile "io.springfox:springfox-swagger-ui:2.6.1"
+
+    implementation "org.cache2k:cache2k-api:${cache2kVersion}"
+    runtimeOnly "org.cache2k:cache2k-core:${cache2kVersion}"
 
 
     // ======================= Tests ==========================
