--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 buildscript {
-    ext.kotlin_version = '1.3.31'
-
+    ext.kotlinVersion = '1.3.40'
     repositories {
         mavenCentral()
         jcenter()
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:2.1.4.RELEASE")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version")
+        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
         classpath 'com.github.jengelman.gradle.plugins:shadow:4.0.3'
     }
 }
+
 
 plugins {
     id 'com.gradle.build-scan' version '2.3'
@@ -22,6 +22,11 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
+ext {
+    cache2kVersion = '1.2.2.Final'
+    swaggerVersion = '2.6.1'
+    lombokVersion = '1.16.20'
+}
 
 bootJar {
     baseName = 'ticktok'
@@ -36,15 +41,13 @@ repositories {
     jcenter()
 }
 
-def cache2kVersion = '1.2.2.Final'
-
 dependencies {
     configurations {
         all*.exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
     }
 
-    compileOnly "org.projectlombok:lombok:1.16.20"
-    annotationProcessor "org.projectlombok:lombok:1.16.20"
+    compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
     // Spring
     compile("org.springframework.boot:spring-boot-starter-web") {
@@ -65,16 +68,16 @@ dependencies {
 
     compile "com.google.code.gson:gson:2.8.2"
 
-    //Swagger
-    compile "io.springfox:springfox-swagger2:2.6.1"
-    compile "io.springfox:springfox-swagger-ui:2.6.1"
+    // Swagger
+    compile "io.springfox:springfox-swagger2:${swaggerVersion}"
+    compile "io.springfox:springfox-swagger-ui:${swaggerVersion}"
 
     implementation "org.cache2k:cache2k-api:${cache2kVersion}"
     runtimeOnly "org.cache2k:cache2k-core:${cache2kVersion}"
 
 
     // ======================= Tests ==========================
-    testCompile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    testCompile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlinVersion"
 
     // JUnit 5
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.1.0"
