--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 buildscript {
-    ext.kotlinVersion = '1.3.40'
+    ext.kotlinVersion = '1.3.50'
     repositories {
         mavenCentral()
         jcenter()
@@ -59,6 +59,7 @@ dependencies {
     compile "org.springframework.boot:spring-boot-starter-aop"
     compile "org.springframework.boot:spring-boot-starter-data-mongodb"
     compile "org.springframework.boot:spring-boot-starter-amqp"
+    compile "org.springframework.boot:spring-boot-starter-hateoas"
 
     compile "org.eclipse.jetty:jetty-webapp:9.3.+"
     compile "org.eclipse.jetty:jetty-jsp:9.2.+"
@@ -99,6 +100,7 @@ dependencies {
     testCompile "org.apache.httpcomponents:fluent-hc:4.5.5"
     testCompile 'org.assertj:assertj-core:3.11.1'
     testCompile "org.awaitility:awaitility-kotlin:3.1.5"
+
 }
 
 compileKotlin {
